<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    android:textDirection="firstStrongRtl"
    tools:context=".User5">

    <CheckBox
        android:id="@+id/checkBox24"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:button="@android:drawable/checkbox_off_background"
        android:text="@string/checkBox24"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.84" />

    <CheckBox
        android:id="@+id/checkBox23"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:button="@android:drawable/checkbox_off_background"
        android:text="@string/checkBox23"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.84" />

    <CheckBox
        android:id="@+id/checkBox22"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:button="@android:drawable/checkbox_off_background"
        android:text="@string/checkBox22"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.72" />

    <CheckBox
        android:id="@+id/checkBox21"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:button="@android:drawable/checkbox_off_background"
        android:text="@string/checkBox21"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.72" />

    <CheckBox
        android:id="@+id/checkBox20"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:button="@android:drawable/checkbox_off_background"
        android:text="@string/checkBox20"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.6" />

    <CheckBox
        android:id="@+id/checkBox19"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:button="@android:drawable/checkbox_off_background"
        android:text="@string/checkBox19"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.48" />

    <CheckBox
        android:id="@+id/checkBox18"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:button="@android:drawable/checkbox_off_background"
        android:text="@string/checkBox18"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.48" />

    <CheckBox
        android:id="@+id/checkBox16"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:button="@android:drawable/checkbox_off_background"
        android:text="@string/checkBox16"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.36" />

    <CheckBox
        android:id="@+id/checkBox15"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:button="@android:drawable/checkbox_off_background"
        android:text="@string/checkBox15"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.36" />

    <CheckBox
        android:id="@+id/checkBox14"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:button="@android:drawable/checkbox_off_background"
        android:text="@string/checkBox14"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.24" />

    <CheckBox
        android:id="@+id/checkBox13"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:button="@android:drawable/checkbox_off_background"
        android:text="@string/checkBox13"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.24" />

    <CheckBox
        android:id="@+id/checkBox12"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:button="@android:drawable/checkbox_off_background"
        android:text="@string/checkBox12"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.12" />

    <CheckBox
        android:id="@+id/checkBox11"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:button="@android:drawable/checkbox_off_background"
        android:text="@string/checkBox11"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/checkBox6"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:button="@android:drawable/checkbox_off_background"
        android:text="@string/checkBox16"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotationX="13"
        android:text="MUST GO"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="必ず行きたい！！"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="556dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="観光地の選択"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.186" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Where you definitely want to go"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.039" />

    <Button
        android:id="@+id/ButtonToUser7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NEXT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        app:layout_constraintVertical_bias="0.795" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="224dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="98dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="678dp" />

    <CheckBox
        android:id="@+id/checkBox17"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:button="@android:drawable/checkbox_off_background"
        android:text="@string/checkBox17"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.6" />

    <CheckBox
        android:id="@+id/checkBox"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:button="@android:drawable/checkbox_off_background"
        android:text="@string/checkBox"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.12" />

</androidx.constraintlayout.widget.ConstraintLayout>
